<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLy1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/gallery_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_from_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.example.task_2_drawing_app.DrawingView
            android:id="@+id/drawing_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Hello World!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawing_canvas">

        <ImageButton
            android:id="@+id/undo"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/undo"
            android:src="@drawable/undo_left_svgrepo_com"
            android:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/brush_size"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/brush_size"
            android:scaleType="fitXY"
            android:src="@drawable/brush_svgrepo_com" />

        <ImageButton
            android:id="@+id/color_picker"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/color_picker"
            android:src="@drawable/picker_svgrepo_com"
            android:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/upload"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/upload_drawing"
            android:src="@drawable/gallery_send_svgrepo_com"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_gallery"
            android:src="@drawable/gallery_wide_svgrepo_com"
            android:backgroundTint="@color/white" />






    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>